manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: 82265628
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 82265628
  template:
    metadata:
      labels:
        app: 82265628
    spec:
      containers:
        - name: 82265628
          image: cepgstapacr.azurecr.io/82265628
          ports:
          - containerPort: 8080
